join_outer.result, join_outer.test:   Added a test case for bug #5896. sql_select.cc:   Fixed the problem of ignoring on expressions depending   only on outer table when outer table either contains   1 row or is guaranteed to return only 1 row (bug #5896).